# ai-labs

./: JNet_ELU_Full_data_Training.py  README.md
01_autonomous-vehicles/autonomous-driving-simulator/: image_check.py
01_autonomous-vehicles/robot-chase-game/: CMakeLists.txt  README.md
01_autonomous-vehicles/robot-chase-game/include/: robot.h  robotai.h
01_autonomous-vehicles/robot-chase-game/src/: chartodir.cpp  displaygrid.cpp  game.cpp  game_static_robots.cpp  init.cpp  init_robots_with_grid.cpp  resetgrid.cpp  robot.cpp  robotai.cpp
03_tools/computer-vision/image-processing/: p10-homo_gauss_blur.cpp  p11-erode_dilate.cpp  p12-trackbar.cpp  p5-brightness_control.cpp  test_prog.cpp
03_tools/computer-vision/yolo/: yolo.py  yolo_basics.puml  yolo_basics.py  yolo_comparisons.py
03_tools/image-processing/: p14-webcam_stream_rotate.cpp  p15-object_detection.cpp  p16-object_tracking.cpp  p4-webcam_save.cpp  p7-img_hist_equal.cpp
03_tools/machine-learning/ml-algorithms-time-comparisons/: data_analysis.py  linear_regression_multipleruns.cpp  linear_regression_multipleruns.py  (+1 more)
04_docs/: README.md  WaferQuality_DeepLearning_MultiClassClassification.ipynb
C++/: p1-img_read.cpp  p11  p13-mouse_click.cpp  p2-img_disp.cpp  p3-vid_play.cpp  p6-webcam_contrast_control.cpp  p8-BGR_hist_equal.cpp  p9-webcam_hist_equal.cpp  readme.md
machine-learning/: README.md
machine-learning/ml-algorithms-time-comparisons/: linear_regression  linear_regression.cpp  linear_regression.py  linear_regression_singlerun.py  run_data_cplusplus.csv
model_readings/green/: Green_Graphs.xlsx
(+15 files in other folders)
